--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       <h2>Your Age in Days</h2>
       <div class="flex-box-container-1">
         <div>
+          DoB : <input type="date" id="dob" min="1900-01-01" max="2020-06-01" />
+        </div>
+
+        <div>
           <button class="btn btn-primary" onclick="getAgeInDays()">
-            Click Me
+            Get my age
           </button>
         </div>
         <div>
@@ -119,10 +123,10 @@
 
       <div class="flex-blackjack-row-2">
         <div>
-          <button class="btn-lg btn-primary mr-2" id="blackjack-hit-button">
+          <button class="btn-lg btn-primary" id="blackjack-hit-button">
             Hit
           </button>
-          <button class="btn-lg btn-warning mr-2" id="blackjack-stand-button">
+          <button class="btn-lg btn-warning" id="blackjack-stand-button">
             Stand
           </button>
           <button class="btn-lg btn-danger" id="blackjack-deal-button">
@@ -147,6 +151,23 @@
       </div>
     </div>
 
-    <script src="static/js/script.js"></script>
+    <script src="static/js/script.js">
+      // jQuery to set the max available date
+            $(function(){
+            var dtToday = new Date();
+
+            var month = dtToday.getMonth() + 1;
+            var day = dtToday.getDate();
+            var year = dtToday.getFullYear();
+
+            if(month < 10)
+                month = '0' + month.toString();
+            if(day < 10)
+                day = '0' + day.toString();
+
+            var maxDate = year + '-' + month + '-' + day;
+            $('#txtDate').attr('max', maxDate);
+        });
+    </script>
   </body>
 </html>
